--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul class="nav-list">
             <li><a href="index.html" class="nav-link active">Home</a></li>
             <li><a href="#sobre-footer" class="nav-link">Sobre</a></li>
-            <li><a href="puclicar.html" class="nav-link">publique seu post</a></li> 
+            <li><a href="sugestao.html" class="nav-link">sugira seu post</a></li> 
             <li><a href="#ultimo-post" class="nav-link">Último Post</a></li>
             <li><a href="#contato-footer" class="nav-link">Contato</a></li>
           </ul>
